--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,72 @@
+aiofiles==24.1.0
+annotated-types==0.7.0
+anyio==4.9.0
+audioop-lts==0.2.1
 blinker==1.9.0
+certifi==2025.6.15
+charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
 contourpy==1.3.2
 cycler==0.12.1
+fastapi==0.116.0
+ffmpy==0.6.0
 filelock==3.18.0
 Flask==3.1.1
 fonttools==4.58.5
 fsspec==2025.5.1
+gradio==5.35.0
+gradio_client==1.10.4
+groovy==0.1.2
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.33.2
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 kiwisolver==1.4.8
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.3
+mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.5
 numpy==1.26.4
+orjson==3.10.18
 packaging==25.0
+pandas==2.3.1
 pillow==11.3.0
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydub==0.25.1
+Pygments==2.19.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.4
+rich==14.0.0
+ruff==0.12.2
+safehttpx==0.1.6
+semantic-version==2.10.0
 setuptools==80.9.0
+shellingham==1.5.4
 six==1.17.0
+sniffio==1.3.1
+starlette==0.46.2
 sympy==1.14.0
+tomlkit==0.13.3
 torch==2.7.1
 torchcam==0.4.0
 torchvision==0.22.1
+tqdm==4.67.1
+typer==0.16.0
+typing-inspection==0.4.1
 typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.35.0
+websockets==15.0.1
 Werkzeug==3.1.3
