--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
-{
-  "builds": [
-    { "src": "index.py", "use": "@vercel/python" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "index.py" }
-  ]
-}
+// {
+//   "builds": [
+//     { "src": "index.py", "use": "@vercel/python" }
+//   ],
+//   "routes": [
+//     { "src": "/(.*)", "dest": "index.py" }
+//   ]
+// }
